--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -14,13 +14,24 @@
         <td mat-cell *matCellDef="let element"> {{element.price}} </td>
       </ng-container>
       <ng-container matColumnDef="createdDate">
-        <th mat-header-cell *matHeaderCellDef> CreatedDate </th>
+        <th mat-header-cell *matHeaderCellDef>Created Date</th>
         <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
       </ng-container>
       <ng-container matColumnDef="updatedDate">
-        <th mat-header-cell *matHeaderCellDef> Updated Date </th>
+        <th mat-header-cell *matHeaderCellDef>Updated Date</th>
         <td mat-cell *matCellDef="let element"> {{element.updatedDate}} </td>
       </ng-container>
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef width="30"> </th>
+        <td mat-cell *matCellDef="let element"> <img  src="../../../../../assets/edit.png" width="30" height="30"/> </td>
+      </ng-container>
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef width="30"> </th>
+       <td [id]="element.id" mat-cell *matCellDef="let element" appDelete (callBack)="getProducts()" > <!--  <img  src="../../../../../assets/delete.png" width="30" height="30" (click)="delete(element.id, $event)"/>-->
+        
+      </td> 
+      </ng-container>
+      
   
 
   
