--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -27,7 +27,11 @@
       </ng-container>
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef width="30"> </th>
-       <td [id]="element.id" mat-cell *matCellDef="let element" appDelete (callBack)="getProducts()" > <!--  <img  src="../../../../../assets/delete.png" width="30" height="30" (click)="delete(element.id, $event)"/>-->
+       <td [id]="element.id" mat-cell *matCellDef="let element" 
+       appDelete
+        [id]="element.id"
+         (callBack)="getProducts()"
+         controller="products" > <!--  <img  src="../../../../../assets/delete.png" width="30" height="30" (click)="delete(element.id, $event)"/>-->
         
       </td> 
       </ng-container>
