--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -21,9 +21,13 @@
         <th mat-header-cell *matHeaderCellDef>Updated Date</th>
         <td mat-cell *matCellDef="let element"> {{element.updatedDate}} </td>
       </ng-container>
+      <ng-container matColumnDef="photos">
+        <th mat-header-cell *matHeaderCellDef width="30"> </th>
+        <td mat-cell *matCellDef="let element"> <img style="cursor: pointer" (click)="addProductImages(element.id)" src="../../../../../assets/photo.png" width="30" height="30"/> </td>
+      </ng-container>
       <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef width="30"> </th>
-        <td mat-cell *matCellDef="let element"> <img  src="../../../../../assets/edit.png" width="30" height="30"/> </td>
+        <td mat-cell *matCellDef="let element"> <img style="cursor: pointer" src="../../../../../assets/edit.png" width="30" height="30"/> </td>
       </ng-container>
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef width="30"> </th>
