--- a/src/app/ui/components/login/login.component.html
+++ b/src/app/ui/components/login/login.component.html
@@ -13,6 +13,9 @@
           <input #txtPassword type="password" class="form-control" id="password" placeholder="Şifre">
         </div>
 
+        <asl-google-signin-button></asl-google-signin-button>
+        <img src="../../../assets/facebook.png" style="width: 30px;height: 30px; cursor:pointer" (click)="facebookLogin()" />
+        <br />
         <button type="submit" style="margin-top: 5px;" class="btn btn-primary" (click)="login(txtUsernameOrEmail.value, txtPassword.value)">Giriş Yap</button>
 
   
